created the contact and Image file

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         Many other countries also have their own spin-offs of the croissant. From Spain’s cream-filled Xuixo to the American fast-food croissan’wich, it’s truly a staple of modern global cuisine.
     </p>
 
-    <a href="http://">Homepage</a>
-    <a href="http://">Photo Gallary</a>
-    <a href="http://">Contact</a>
+    <a href="/">Homepage</a>
+    <a href="photo.html">Photo Gallary</a>
+    <a href="contact.html">Contact</a>
 
     
 </body>
