--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <title>Croissant</title>
 </head>
-<body>
-    <a href="index.html">Back to Homepage</a>
-    <h1>
-        Welcome to Contact Page
-    </h1>
+<body class="body">
+    <a href="index.html" class="homepage-link">Back to Homepage</a>
+    <br>
+    <h2 class="text-center">📮 Contact</h2>
+    <p class="contact">To learn more, reach us at  
+        <a href="mailto:croissanthng@gmail.com" class="email-link mb-5">
+        croissanthng@gmail.com
+        </a>
+
+    </p>
    
     
 </body>
