--- a/index.html
+++ b/index.html
@@ -8,22 +8,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <title>Croissant</title>
 </head>
-<body>
-    <h1>
+<body class="body">
+    <h1 class="heading">
       🥐  A BRIEF HISTORY OF CROISSANTS.
     </h1>
-    <p>
+    <p class="paragraph-link">
         In 1915, Sylvain Claudius Goy recorded the first-known French version of the croissant recipe. Instead of brioche dough, as August Zang used, Goy transformed the recipe to use a laminated yeast dough. Lamination involves folding butter and dough to create thin, flaky layers of pastry.
     </p>
-    <br>
-    <p>Through its many evolutions, food experts and historians agree that the croissant has become a uniquely French pastry. The French government even named it as the national French product in 1920.
+    <div class="navigation-links">
+        <a href="photo.html" class="photo-link">Photo Gallary</a>
+        <a href="contact.html" class="contact-link">Contact</a>
+    </div>
 
-        Many other countries also have their own spin-offs of the croissant. From Spain’s cream-filled Xuixo to the American fast-food croissan’wich, it’s truly a staple of modern global cuisine.
-    </p>
-
-    <a href="/">Homepage</a>
-    <a href="photo.html">Photo Gallary</a>
-    <a href="contact.html">Contact</a>
+    
 
     
 </body>
