--- a/photo.html
+++ b/photo.html
@@ -8,12 +8,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <title>Croissant</title>
 </head>
-<body>
-    <a href="index.html">Back to Homepage</a>
-    <h1>
+<body class="body">
+    <a href="index.html" class="homepage-link">Back to Homepage</a>
+    <h6 class="mt-5 heading welcome">
         Welcome to image Gallary
-    </h1>
-   
-    
+    </h6>
+
+    <div class="container d-flex justify-content-center">
+        <div class="row">
+          <div class="col">
+            <img
+              src="src/images/croissant.webp"
+              alt="SheCodes Logo"
+              class="img-fluid rounded shadow" />
+          </div>
+        </div>
+    </div>   
 </body>
 </html>
