--- a/contact.html
+++ b/contact.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Multi-page Website, showing a brief history of Croissant, done by Student Adaobi as a project for SheCodes Responsive Program">
     <link rel="stylesheet" href="src/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <title>Croissant</title>
+    <title>Contact Page for the brief history of Croissant Website - SheCodes Student Project</title>
 </head>
 <body class="body">
     <a href="index.html" class="homepage-link">Back to Homepage</a>
     <br>
     <h2 class="text-center">📮 Contact</h2>
     <p class="contact">To learn more, reach us at  
-        <a href="mailto:croissanthng@gmail.com" class="email-link mb-5">
+        <a href="mailto:croissanthng@gmail.com" target="_blank" class="email-link mb-5">
         croissanthng@gmail.com
         </a>
 
