--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Multi-page Website, showing a brief history of Croissant, done by Student Adaobi as a project for SheCodes Responsive Program">
     <link rel="stylesheet" href="src/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <title>Croissant</title>
+    <title>Brief history of Croissant Homepage - SheCodes Student Project</title>
 </head>
 <body class="body">
     <h1 class="heading">
@@ -18,10 +19,6 @@
     <div class="navigation-links">
         <a href="photo.html" class="photo-link">Photo Gallary</a>
         <a href="contact.html" class="contact-link">Contact</a>
-    </div>
-
-    
-
-    
+    </div>  
 </body>
 </html>
