--- a/photo.html
+++ b/photo.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Multi-page Website, showing a brief history of Croissant, done by Student Adaobi as a project for SheCodes Responsive Program">
     <link rel="stylesheet" href="src/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <title>Croissant</title>
+    <title>Photo Gallery for the brief history of Croissant Website - SheCodes Student Project</title>
 </head>
 <body class="body">
     <a href="index.html" class="homepage-link">Back to Homepage</a>
     <h6 class="mt-5 heading welcome">
-        Welcome to image Gallary
+        Welcome to Image Gallery
     </h6>
 
     <div class="container d-flex justify-content-center">
@@ -19,7 +20,7 @@
           <div class="col">
             <img
               src="src/images/croissant.webp"
-              alt="SheCodes Logo"
+              alt="Croissant Image"
               class="img-fluid rounded shadow" />
           </div>
         </div>
